crates/wadl-engine/tests/snapshots/golden_cascade__golden_uncoupled_space_is_allowed.snap
---
source: crates/wadl-engine/tests/golden_cascade.rs
expression: "decide(\"1-100-0-L\")"
---
{
  "state": "ALLOW",
  "trace": [],
  "earliest_clear": null
}
